feat: 리뷰 피드백 반영 - CoffeeChatAppChangeStatusDto, CoffeeChatApplicationUpdateDto 에 사용되지 않는 coffeeChatInfoId 필드 제거 - .collect(Collectors.toList()) -> toList() 수정 (java 16 이상부터 지원되는 기능)